# wiki_kalenderscraper

./: .gitignore  README.md  default.nix  flake.nix  kalenderscraper.py  pyproject.toml  requirements.txt
wiki_kalenderscraper/: __init__.py
